apps/pydio/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: pydio
  labels:
    name: pydio
