apps/pydio/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pydio
  labels:
    app.kubernetes.io/name: pydio
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pydio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pydio
        app.kubernetes.io/instance: pydio-prod
        app.kubernetes.io/component: pydio
        app.kubernetes.io/part-of: pydio
      annotations:
        prometheus.io/port: "3100"
        prometheus.io/scrape: "true"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: pydio
          image: pydio/cells:5.1.0
          ports:
            - name: pydio
              containerPort: 8080
              protocol: TCP
            - name: grpc
              containerPort: 33060
              protocol: TCP
          securityContext:
            privileged: false
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: "512Mi"
              cpu: "10m"
            limits:
              memory: "1024Mi"
          volumeMounts:
            - name: minio
              mountPath: /.minio
            - name: storage
              mountPath: /data
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: pydio
        - name: minio
          emptyDir:
            sizeLimit: 5Mi
