apps/pydio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pydio
spec:
  selector:
    app.kubernetes.io/name: pydio
  ports:
    - protocol: TCP
      port: 80
      targetPort: pydio
  type: ClusterIP
