apps/pydio/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pydio
spec:
  hosts:
    - pydio.svc.dd.soeren.cloud
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: pydio
            port:
              number: 80
